# binance-web3-connector-python

./: LICENCE  README.md
clients/web3-wallet/: CHANGELOG.md  README.md  pyproject.toml
clients/web3-wallet/docs/rest_api/: certificate-pinning.md  compression.md  error-handling.md  httpsAgent.md  keepAlive.md  key-pair-authentication.md  proxy.md  retries.md  timeout.md
clients/web3-wallet/examples/rest_api/Market/: get_candles.py  get_holders_ranking.py  get_hot_token_list.py  get_hot_tokens.py  get_price.py  get_price_info.py  get_supported_chains.py  get_token_advanced_info.py  get_token_basic_info.py  get_token_price.py  get_token_trades.py  get_token_trading_info.py  get_top_liquidity_pools.py  get_top_traders.py  search_token.py  search_tokens.py
clients/web3-wallet/examples/rest_api/Trading/: build_swap_transaction.py  get_aggregated_quote.py  get_aggregator_supported_chains.py  get_all_tokens.py  get_erc20_approve_transaction.py  get_transaction_status.py
clients/web3-wallet/examples/rest_api/Transaction/: broadcast_transactions.py  get_broadcast_orders.py  get_gas_limit.py  get_gas_price.py  get_transaction_detail_by_hash.py  get_transaction_supported_chains.py  get_transactions_by_address.py  simulate_transactions.py
clients/web3-wallet/examples/rest_api/Wallet/: get_all_token_balances_by_address.py  get_token_balances_by_address.py  get_total_value_by_address.py  get_wallet_supported_chains.py
clients/web3-wallet/src/binance_sdk_web3_wallet/: __init__.py  metadata.py  web3_wallet.py
clients/web3-wallet/tests/unit/rest_api/: test_market_api.py  (+3 more)
(+124 files in other folders)
