[tool.poetry]
name = "binance-web3-wallet"
version = "2.0.0"
description = "Official Binance Web3Wallet Connector - A lightweight library that provides a convenient interface to Binance's Web3Wallet REST API"
authors = ["Binance"]
license = "MIT"
include = ["CHANGELOG.md", "LICENSE"]
packages = [
  { include = "binance_sdk_web3_wallet", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
requests = ">=2.34.2"
urllib3 = ">=2.7.0"
pydantic = ">=2.10.0"
pycryptodome = "^3.17"
aiohttp = "^3.14.0"
binance-common = "4.0.0"

[tool.poetry.extras]
dev = ["pytest"]

[tool.poetry.group.dev.dependencies]
tox = "^4.27.0"
pytest-asyncio = "^1.0.0"
black = "^25.1.0"
ruff = "^0.12.0"
pytest = ">=8.4.1"

[tool.ruff]
exclude = [".git", ".tox", "build", "dist"]
lint.ignore = ["E741"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
